<resources>
    <string name="app_name">Pádel&amp;More</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="volver">Volver</string>
    <string name="mi_informacion">Mi información</string>
    <string name="ajustes_basicos">Ajustes básicos</string>
    <string name="soporte">Soporte</string>
    <string name="comunidad">Comunidad</string>
    <string name="buscar_comunidad">Buscar personas, amigos o jugadores</string>
    <string name="busqueda_nombre_alias_club">Nombre, alias o club</string>
    <string name="companero">Compañero</string>
    <string name="resultado">Resultado</string>
    <string name="buscar">Buscar</string>
    <string name="ciudad_opcional">Ciudad (opcional)</string>
    <string name="nivel_buscado">Nivel buscado: %1$d</string>
    <string name="resultados_comunidad">Resultados de comunidad</string>
    <string name="seguidores">Seguidores</string>
    <string name="seguidos">Seguidos</string>
    <string name="seguidores_count">%1$d seguidores</string>
    <string name="partidos_jugados">Partidos jugados</string>
    <string name="ultimos_partidos_jugados">Últimos partidos jugados</string>
    <string name="publicaciones_recientes">Publicaciones recientes</string>
    <string name="seguir">Seguir</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="ver_perfil">Ver perfil</string>
    <string name="sin_resultados_comunidad">No hay resultados para esa búsqueda</string>
    <string name="sin_partidos">Aún no tiene partidos registrados</string>
    <string name="sin_publicaciones">Aún no ha publicado nada</string>
    <string name="sin_contenido_perfil_publico">Aún no tiene partidos ni publicaciones</string>
    <string name="perfil_publico">Perfil público</string>
    <string name="tu_perfil">Tu perfil</string>
    <string name="torneos">Torneos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="edad_label">Edad:</string>
    <string name="introduce_tu_edad">Introduce tu edad</string>
    <string name="nivel_label">Nivel:</string>
    <string name="mano_label">Mano:</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="mis_reservas">Mis Reservas</string>
    <string name="ultimos_resultados">Últimos Resultados</string>
    <string name="torneos_apuntados">Torneos Apuntados</string>
    <string name="clubs">Clubs</string>
    <string name="sorteos">Sorteos</string>

    <string-array name="niveles_padel">
        <item>Principiante</item>
        <item>Iniciado</item>
        <item>Intermedio</item>
        <item>Avanzado</item>
        <item>Profesional</item>
    </string-array>

    <string-array name="mano_juego">
        <item>Derecha</item>
        <item>Izquierda</item>
        <item>Ambidextro</item>
    </string-array>
</resources>
